Fixed errors with naming